# hyper-api-samples

./: .gitignore  LICENSE  README.md
CPP/: insert_data_into_single_table.cpp  insert_data_with_expressions.cpp  insert_spatial_data_to_a_hyper_file.cpp  read_and_print_data_from_existing_hyper_file.cpp
Community-Supported/: .gitignore  README.md
Community-Supported/adjust-vertex-order/: README.md  adjust_vertex_order.py  europe_interior_right.hyper
Community-Supported/clouddb-extractor/: README.md  SAMPLE-config.yml  SAMPLE-delete_and_append_script.py  SAMPLE-upsert_script.py  azuresql_extractor.py  base_extractor.py  bigquery_extractor.py  config.yml  delete_conditions_example.json  extractor_cli.py  mysql_extractor.py  postgres_extractor.py  redshift_extractor.py  requirements.txt  tableau_restapi_helpers.py
Community-Supported/convert-hyper-file/: README.md  convert_hyper_file.py
Community-Supported/dataupdate-lambda/: Dockerfile  README.md  app.py  requirements.txt  tableauserverclient-0.15.0+41.gb8d4a01-py2.py3-none-any.whl  update-hyper.py
Community-Supported/defragment-hyper-file/: README.md  defragment_data_of_existing_hyper_file.py
Community-Supported/flights-data-incremental-refresh/: README.md  flights-data-incremental-refresh.py  requirements.txt
Community-Supported/git-to-hyper/: README.md  advanced-git-to-hyper.py  basic-git-to-hyper.py  requirements.txt
Community-Supported/hyper-jupyter-kernel/: README.md  setup.py
Community-Supported/hyper-jupyter-kernel/hyper_kernel/: __init__.py  __main__.py  install.py  kernel.py
Community-Supported/hyper-jupyter-kernel/hyper_kernel/data/: __init__.py
Community-Supported/hyper-to-csv/: README.md  hyper-to-csv.py  requirements.txt
Community-Supported/hyper-to-tdsx/: README.md  hyper_to_tdsx.py
Community-Supported/hyperapi-cli/: README.md  hyperapi-cli.py
Community-Supported/list-hyper-contents/: README.md  list_hyper_contents.py
Community-Supported/native-s3/: README.md  join-parquet-and-csv-on-s3.py  parquet-on-s3-to-hyper.py  query-csv-on-s3.py  requirements.txt
Community-Supported/pandas-to-hyper/: README.md  create_hyper_from_pandas_dataframe.py  requirements.txt
Community-Supported/parquet-to-hyper/: README.md  create_hyper_file_from_parquet.py  orders_10rows.parquet
Community-Supported/publish-hyper/: README.md  publish-hyper-file.py  requirements.txt
Community-Supported/publish-multi-table-hyper/: README.md  config.json  extract.hyper  publish-multi-table-hyper.py  requirements.txt  test.tdsx
Community-Supported/publish-multi-table-hyper-legacy/: README.md  publish-multi-table-hyper.py
Community-Supported/query-external-data/: README.md  customers.csv  customers_2.csv  lineitem.csv  lineitem_2.csv  orders.parquet  query_external_data.py
Community-Supported/s3-compatible-services/: README.md  query-parquet-on-gs.py
Community-Supported/s3-to-hyper/: README.md  config.json  extract.hyper  requirements.txt  s3-hyper.py  test.tdsx
Community-Supported/tde-to-hyper/: README.md  requirements.txt  tde_to_hyper.py
DotNet/: InsertDataWithExpressions.cs
Java/: settings.gradle
Java/create-hyper-file-from-csv/src/main/java/examples/: CreateHyperFileFromCSV.java
Java/data/: customers.csv  products.csv
Java/delete-data-in-existing-hyper-file/: build.gradle
Java/insert-data-into-single-table/: build.gradle
Java/insert-data-with-expressions/: build.gradle
Java/insert-spatial-data-to-a-hyper-file/: build.gradle
Python/: defragment_data_of_existing_hyper_file.py  insert_spatial_data_to_a_hyper_file.py
Python/data/: superstore_sample.hyper
Tableau-Supported/: README.md
Tableau-Supported/CPP/: CMakeLists.txt  create_hyper_file_from_csv.cpp  delete_data_in_existing_hyper_file.cpp  insert_data_into_multiple_tables.cpp  insert_data_into_single_table.cpp  insert_data_with_expressions.cpp  insert_geospatial_data_to_a_hyper_file.cpp  insert_spatial_data_to_a_hyper_file.cpp  read_and_print_data_from_existing_hyper_file.cpp  update_data_in_existing_hyper_file.cpp
Tableau-Supported/CPP/data/: Starbucks.csv  calcs.csv  shunting_report.csv  superstore.csv
Tableau-Supported/CPP/data/superstore_normalized/: addresses.csv  orders.csv  states.csv
Tableau-Supported/DotNet/: CreateHyperFileFromCsv.cs  DeleteDataInExistingHyperFile.cs  Example.csproj  InsertDataIntoMultipleTables.cs  InsertDataIntoSingleTable.cs  InsertDataWithExpressions.cs  InsertSpatialDataToAHyperFile.cs  Program.cs  ReadDataFromExistingHyperFile.cs  UpdateDataInExistingHyperFile.cs  build.bat  build.sh
Tableau-Supported/Java/create-hyper-file-from-csv/: build.gradle
Tableau-Supported/Java/create-hyper-file-from-csv/src/main/java/examples/: CreateHyperFileFromCSV.java
Tableau-Supported/Java/data/: lineitems.csv  superstore_sample_denormalized.hyper
Tableau-Supported/Java/delete-data-in-existing-hyper-file/: build.gradle
Tableau-Supported/Java/delete-data-in-existing-hyper-file/src/main/java/examples/: DeleteDataInExistingHyperFile.java
Tableau-Supported/Java/insert-data-into-multiple-tables/: build.gradle
Tableau-Supported/Java/insert-data-into-multiple-tables/src/main/java/examples/: InsertDataIntoMultipleTables.java
Tableau-Supported/Java/insert-data-into-single-table/: build.gradle
Tableau-Supported/Java/insert-data-into-single-table/src/main/java/examples/: InsertDataIntoSingleTable.java
Tableau-Supported/Java/insert-data-with-expressions/: build.gradle
Tableau-Supported/Java/insert-spatial-data-to-a-hyper-file/: build.gradle
Tableau-Supported/Java/read-and-print-data-from-existing-hyper-file/: build.gradle
Tableau-Supported/Java/update-data-in-existing-hyper-file/: build.gradle
Tableau-Supported/Python/: create_hyper_file_from_csv.py  delete_data_in_existing_hyper_file.py  insert_data_into_multiple_tables.py  insert_data_into_single_table.py  insert_data_with_expressions.py  insert_spatial_data_to_a_hyper_file.py  read_and_print_data_from_existing_hyper_file.py  update_data_in_existing_hyper_file.py
(+4 files in other folders)
